tests/ui/consts/fn_trait_refs.stderr
error[E0635]: unknown feature `const_fn_trait_ref_impls`
  --> $DIR/fn_trait_refs.rs:3:12
   |
LL | #![feature(const_fn_trait_ref_impls)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `(i32, i32, i32): const PartialEq` is not satisfied
  --> $DIR/fn_trait_refs.rs:71:17
   |
LL |         assert!(test_one == (1, 1, 1));
   |                 ^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `(i32, i32): const PartialEq` is not satisfied
  --> $DIR/fn_trait_refs.rs:74:17
   |
LL |         assert!(test_two == (2, 2));
   |                 ^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0635.
For more information about an error, try `rustc --explain E0277`.
